# The-Genius-Game

./: .gitignore  Makefile  OVERVIEW.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  PLACEHOLDER.md  README.md  requirements.txt
backend/app/: __init__.py  blackwhite.py  board.py  main.py  protocol.py  room.py
backend/app/api/: auth.py  health.py  rooms.py
backend/app/core/: config.py  security.py
backend/app/models/: room.py
backend/app/services/: matchmaking.py  (+2 more)
backend/tests/: test_board.py  test_quick_match.py  test_smoke.py  test_ws.py
core/godot-cpp/: README.md
core/gomoku/: CMakeLists.txt  gomoku_board.cpp  gomoku_board.h
core/gomoku/tests/: test_gomoku_board.cpp
core/gomoku_gdext/: SConstruct
core/omok/: CMakeLists.txt
core/omok/gdextension/: omok.gdextension
core/omok/include/omok/: ai.hpp  board.hpp  rules.hpp
core/omok/src/: ai.cpp  board.cpp  rules.cpp
core/omok/tests/: test_rules.cpp
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: PLACEHOLDER.md  project.godot
frontend/gomoku/: .gitignore  board.tscn  export_presets.cfg  gomoku.gdextension  gomoku.gdextension.uid  icon.svg.import  lobby.tscn  project.godot
frontend/scenes/: lobby.tscn  omok_board.tscn
frontend/scripts/: game_session.gd  lobby.gd  net_client.gd  omok_board.gd
infra/: PLACEHOLDER.md  README.md  docker-compose.prod.yml  docker-compose.yml  gen_selfsigned_cert.sh
infra/nginx/: default.conf  nginx.conf  nginx.local.conf
shared/protocol/: models.py  ws-message.schema.json
tools/: deploy_ec2.sh  install_docker_ec2.sh  serve_web.py
(+41 files in other folders)
